# my_rust_playground

./: Cargo.toml  build.rs
.zed/: debug.json
examples/: egui_plot_example.rs  plotly.rs  plotters.rs
proto/playground/: service.proto  user.proto
proto/playground/objects/: car.proto
src/: c_lib_wrapper.rs  cpp_lib_wrapper.rs  grpc_service_implementation.rs  main.rs  protobuf.rs
