[package]
name = "rust-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0"
prost = "0.14"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"


[build-dependencies]
bindgen = "0.72"
cmake = "0.1"
cxx-build = "1.0"
tonic-prost-build = "0.14"
